better out of bounds check

--- a/examples/asteroids.html
+++ b/examples/asteroids.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Asteroids test</title>
+    <style type="text/css" media="screen">
+      * { margin:0; padding:0; }
+    </style>
   </head>
   <body>
-    <canvas id="canvas" width="600" height="400">
+    <canvas id="canvas" width="600" height="380">
     </canvas>
 
     <script src="../js/jquery.js" type="text/javascript" charset="utf-8"></script>
