--- a/examples/asteroids.html
+++ b/examples/asteroids.html
@@ -14,6 +14,7 @@
     <script src="../js/game.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/keys.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/vector.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../js/rotation.js" type="text/javascript" charset="utf-8"></script>
     <script src="spaceship.js" type="text/javascript" charset="utf-8"></script>
     <script src="starfield.js" type="text/javascript" charset="utf-8"></script>
     <script src="application.js" type="text/javascript" charset="utf-8"></script>
