--- a/examples/pong/pong.html
+++ b/examples/pong/pong.html
@@ -16,6 +16,7 @@
     <script src="../../js/vector.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../js/rotation.js" type="text/javascript" charset="utf-8"></script>
     <script src="paddle.js" type="text/javascript" charset="utf-8"></script>
+    <script src="ball.js" type="text/javascript" charset="utf-8"></script>
     <script src="application.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
