--- a/examples/asteroids.html
+++ b/examples/asteroids.html
@@ -10,7 +10,7 @@
     <canvas id="canvas" width="960" height="480">
     </canvas>
 
-    <script src="../js/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
     <script src="../js/game.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/keys.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/vector.js" type="text/javascript" charset="utf-8"></script>
