--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,13 @@
 <head>
   <title>QUnit Test Suite</title>
   <link rel="stylesheet" href="https://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen">
-  <script type="text/javascript" src="https://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
+  <script src="https://github.com/jquery/qunit/raw/master/qunit/qunit.js" type="text/javascript"></script>
+  <script src="../js/game.js" type="text/javascript"></script>
+  <script src="../js/keys.js" type="text/javascript"></script>
+  <script src="../js/rotation.js" type="text/javascript"></script>
+  <script src="../js/vector.js" type="text/javascript"></script>
+  <script src="game_test.js" type="text/javascript"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit Test Suite</h1>
