--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,8 @@
   <div id="qunit-testrunner-toolbar"></div>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
-  <div id="qunit-fixture">test markup</div>
+  <div id="qunit-fixture">
+    <canvas id="canvas"></canvas>
+  </div>
 </body>
 </html>
