--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@
   <script src="../js/keys.js" type="text/javascript"></script>
   <script src="../js/rotation.js" type="text/javascript"></script>
   <script src="../js/vector.js" type="text/javascript"></script>
+  <script src="../js/canvas.js" type="text/javascript"></script>
   <script src="game_test.js" type="text/javascript"></script>
 </head>
 <body>
