--- a/examples/pong/pong.html
+++ b/examples/pong/pong.html
@@ -11,6 +11,7 @@
     </canvas>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
+    <script src="../../js/canvas.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../js/game.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../js/keys.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../js/vector.js" type="text/javascript" charset="utf-8"></script>
