--- a/examples/pong/pong.html
+++ b/examples/pong/pong.html
@@ -3,12 +3,14 @@
   <head>
     <title>Pong</title>
     <style type="text/css" media="screen">
-      * { margin:0; padding:0; }
+      * { margin:0; padding:0; font-family: Helvetica; }
     </style>
   </head>
   <body>
     <canvas id="canvas" width="960" height="480">
     </canvas>
+    
+    <p><strong>Start game:</strong> 'space'<br><strong>Reset:</strong> 'R'<br><strong>Player 1 (left):</strong> 'W': move up, 'S' move down<br><strong>Player 2 (right):</strong> 'Up arrow': move up, 'Down arrow': move down
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
     <script src="../../js/canvas.js" type="text/javascript" charset="utf-8"></script>
