--- a/examples/pong/pong.html
+++ b/examples/pong/pong.html
@@ -3,12 +3,16 @@
   <head>
     <title>Pong</title>
     <style type="text/css" media="screen">
-      * { margin:0; padding:0; font-family: Helvetica; }
+      * { margin:10px; padding:0; font-family: Helvetica; }
     </style>
   </head>
   <body>
-    <canvas id="canvas" width="960" height="480">
-    </canvas>
+    <h1 style="text-align:center">Pong</h1>
+    
+    <div style="margin:0 auto;width:960px">
+      <canvas id="canvas" width="960" height="480">
+      </canvas>
+    </div>
     
     <p><strong>Start game:</strong> 'space'<br><strong>Reset:</strong> 'R'<br><strong>Player 1 (left):</strong> 'W': move up, 'S' move down<br><strong>Player 2 (right):</strong> 'Up arrow': move up, 'Down arrow': move down
 
