--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
   <script src="../js/vector.js" type="text/javascript"></script>
   <script src="../js/canvas.js" type="text/javascript"></script>
   <script src="game_test.js" type="text/javascript"></script>
+  <script src="canvas_test.js" type="text/javascript"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit Test Suite</h1>
