--- a/test/index.html
+++ b/test/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>QUnit Test Suite</title>
-  <link rel="stylesheet" href="https://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
-  <script src="https://github.com/jquery/qunit/raw/master/qunit/qunit.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="support/qunit.css" type="text/css" media="screen">
+  <script src="support/jquery-1.4.3.min.js" type="text/javascript"></script>
+  <script src="support/qunit.js" type="text/javascript"></script>
   <script src="../js/game.js" type="text/javascript"></script>
   <script src="../js/keys.js" type="text/javascript"></script>
   <script src="../js/rotation.js" type="text/javascript"></script>
