--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,10 @@
   <script src="../js/rotation.js" type="text/javascript"></script>
   <script src="../js/vector.js" type="text/javascript"></script>
   <script src="../js/canvas.js" type="text/javascript"></script>
+  <script src="../js/sound.js" type="text/javascript"></script>
   <script src="game_test.js" type="text/javascript"></script>
   <script src="canvas_test.js" type="text/javascript"></script>
+  <script src="sound_test.js" type="text/javascript"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit Test Suite</h1>
