example now using game sounds

--- a/examples/pong/pong.html
+++ b/examples/pong/pong.html
@@ -22,6 +22,7 @@
     <script src="../../js/keys.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../js/vector.js" type="text/javascript" charset="utf-8"></script>
     <script src="../../js/rotation.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../js/sound.js" type="text/javascript" charset="utf-8"></script>
     <script src="score.js" type="text/javascript" charset="utf-8"></script>
     <script src="paddle.js" type="text/javascript" charset="utf-8"></script>
     <script src="ball.js" type="text/javascript" charset="utf-8"></script>
