better description and layout

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>felipeelias/game.js @ GitHub</title>
+	<title>Create Javascript games with game.js</title>
 	
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #0dae34;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		background-color: #FFF;
+		  font-family: "Helvetica Neue", "Arial";
+  		color: #000;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #f251cb; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #000; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #f251cb; }
-    h3 { text-align: center; color: #f251cb; }
-    a { color: #f251cb; }
+		h2 { font-size: 1.5em; color: #000; }
+    h3 { text-align: center; color: #000; }
+    a { color: #F00000; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
@@ -39,10 +39,8 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/felipeelias/game.js/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/felipeelias/game.js/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+      <a href="http://github.com/felipeelias/game.js/zipball/master"><img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+      <a href="http://github.com/felipeelias/game.js/tarball/master"><img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
     <h1><a href="http://github.com/felipeelias/game.js">game.js</a>
@@ -52,20 +50,23 @@
       A javascript framework to create HTML games
     </div>
 
-    <p>Create games with Javascript, HTML5 and canvas</p><h2>Authors</h2>
-<p>Felipe Elias Philipp (felipeelias@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Felipe Elias Philipp (felipeelias@gmail.com)<br/>      </p>
+    <h2>Play pong in Javascript</h2>
 
+		<canvas></canvas>
+
+		<h2>Author</h2>
+		<p>Felipe Elias Philipp (felipeelias@gmail.com)</p>
+
+		<h2>Contact</h2>
+		<p>Felipe Elias Philipp (felipeelias@gmail.com)</p>
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
-      <a href="http://github.com/felipeelias/game.js/zipball/master">zip</a> or
-      <a href="http://github.com/felipeelias/game.js/tarball/master">tar</a> formats.
+      You can download this project in either <a href="http://github.com/felipeelias/game.js/zipball/master">zip</a> or <a href="http://github.com/felipeelias/game.js/tarball/master">tar</a> formats.
     </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
+    
+		<p>
+			You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
       <pre>$ git clone git://github.com/felipeelias/game.js</pre>
     </p>
 
@@ -76,13 +77,15 @@
   </div>
 
   <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-19897205-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-19897205-1");
+			pageTracker._trackPageview();
+		} catch(err) {}
+	</script>
 </body>
 </html>
