added pong sample

--- a/index.html
+++ b/index.html
@@ -52,7 +52,24 @@
 
     <h2>Play pong in Javascript</h2>
 
-		<canvas></canvas>
+    <div style="margin:0 auto;width:960px">
+      <canvas id="canvas" width="960" height="480">
+      </canvas>
+    </div>
+    
+    <p><strong>Start game:</strong> 'space'<br><strong>Reset:</strong> 'R'<br><strong>Player 1 (left):</strong> 'W': move up, 'S' move down<br><strong>Player 2 (right):</strong> 'Up arrow': move up, 'Down arrow': move down
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/js/canvas.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/js/game.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/js/keys.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/js/vector.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/js/rotation.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/js/sound.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/score.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/paddle.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/ball.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/application.js" type="text/javascript" charset="utf-8"></script>
 
 		<h2>Author</h2>
 		<p>Felipe Elias Philipp (felipeelias@gmail.com)</p>
