--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>Create Javascript games with game.js</title>
-	
+
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
@@ -68,20 +68,20 @@
       <canvas id="canvas" width="960" height="480">
       </canvas>
     </div>
-    
+
     <p><strong>Start game:</strong> 'space'<br><strong>Reset:</strong> 'R'<br><strong>Player 1 (left):</strong> 'W': move up, 'S' move down<br><strong>Player 2 (right):</strong> 'Up arrow': move up, 'Down arrow': move down
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/js/canvas.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/js/game.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/js/keys.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/js/vector.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/js/rotation.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/js/sound.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/score.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/paddle.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/ball.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://github.com/felipeelias/game.js/raw/master/examples/pong/application.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/js/canvas.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/js/game.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/js/keys.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/js/vector.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/js/rotation.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/js/sound.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/examples/pong/score.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/examples/pong/paddle.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/examples/pong/ball.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://felipeelias.github.io/game.js/examples/pong/application.js" type="text/javascript" charset="utf-8"></script>
 
 		<h2>Author</h2>
 		<p>Felipe Elias Philipp (felipeelias@gmail.com)</p>
@@ -93,7 +93,7 @@
     <p>
       You can download this project in either <a href="http://github.com/felipeelias/game.js/zipball/master">zip</a> or <a href="http://github.com/felipeelias/game.js/tarball/master">tar</a> formats.
     </p>
-    
+
 		<p>
 			You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
       <pre>$ git clone git://github.com/felipeelias/game.js</pre>
